--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krap-fe",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A boilerplate get starter for new project",
   "scripts": {
     "dev": "next",
@@ -13,72 +13,75 @@
     "lint:fix": "eslint src/ --ext .ts,.tsx,.js,.jsx --fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "release": "node release/autoTag.js"
+    "release": "node release/autoTag.js",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "license": "ISC",
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
-    "@apollo/client": "^3.1.3",
+    "@ant-design/icons": "^4.6.4",
+    "@apollo/client": "^3.4.10",
     "@apollo/react-ssr": "^4.0.0",
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.3.0",
     "@styled-system/theme-get": "^5.1.2",
-    "@types/lodash": "^4.14.165",
-    "antd": "^4.7.2",
-    "apollo-upload-client": "^14.1.3",
-    "dotenv": "^8.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "formik": "^2.1.5",
-    "graphql": "^15.3.0",
-    "graphql-tag": "^2.11.0",
-    "husky": "^4.3.0",
-    "jest": "^24.9.0",
-    "js-cookie": "^2.2.1",
-    "lint-staged": "^10.3.0",
-    "lodash": "^4.17.20",
-    "next": "^9.5.1",
+    "@types/lodash": "^4.14.172",
+    "@types/styled-system__theme-get": "^5.0.1",
+    "antd": "^4.16.13",
+    "apollo-upload-client": "^16.0.0",
+    "dotenv": "^10.0.0",
+    "eslint-plugin-import": "^2.24.2",
+    "formik": "^2.2.9",
+    "graphql": "^15.5.3",
+    "graphql-tag": "^2.12.5",
+    "husky": "^7.0.2",
+    "jest": "^27.1.1",
+    "js-cookie": "^3.0.1",
+    "lint-staged": "^11.1.2",
+    "lodash": "^4.17.21",
+    "next": "^11.1.2",
     "next-cookies": "^2.0.3",
-    "prettier": "^2.0.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "prettier": "^2.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "rebass": "^4.0.7",
-    "redux": "^4.0.5",
-    "styled-components": "^5.1.1",
+    "redux": "^4.1.1",
+    "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
-    "theme-ui": "^0.3.1",
+    "theme-ui": "^0.11.2",
     "uuid": "^8.3.0",
-    "yup": "^0.29.3"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@storybook/addon-actions": "^6.0.6",
-    "@storybook/addon-essentials": "^6.0.6",
-    "@storybook/addon-links": "^6.0.6",
-    "@storybook/react": "^6.0.6",
-    "@testing-library/dom": "^7.26.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@babel/core": "^7.15.5",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/react": "^6.3.8",
+    "@testing-library/dom": "^8.3.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
     "@types/apollo-upload-client": "^14.1.0",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.45",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.2",
-    "@types/styled-system": "^5.1.10",
-    "@types/theme-ui": "^0.3.6",
-    "@types/uuid": "^8.0.1",
-    "@types/yup": "^0.29.4",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.0",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.14",
+    "@types/styled-system": "^5.1.13",
+    "@types/theme-ui": "^0.6.0",
+    "@types/uuid": "^8.3.1",
+    "@types/yup": "^0.29.13",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.7.0",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "react-is": "^16.13.1",
-    "typescript": "^3.9.7"
+    "react-is": "^17.0.2",
+    "typescript": "^4.4.2"
   },
   "husky": {
     "hooks": {
